# poc5358

./: Cargo.toml  README.md
authorizer/: Cargo.toml
common/: Cargo.toml
common/src/: command.rs  lib.rs  types.rs
common/wit/: types.wit
guest/authorizer/: Cargo.toml
guest/authorizer/src/: lib.rs
guest/command/: Cargo.toml
guest/command/src/: lib.rs
guest/common/: Cargo.toml
guest/common/src/: types.rs
guest/instruction/: Cargo.toml
guest/instruction/src/: lib.rs
host/: Cargo.toml
host/src/: bindings.rs  command.rs  conversion.rs  instruction.rs  lib.rs  main.rs  state.rs  types.rs
wasm_command/: Cargo.toml
wasm_command/src/: lib.rs
wasm_command/wit/: lib.wit
wasm_instruction/: Cargo.toml
wit/: authorizer.wit  command.wit  common.wit  host.wit  instruction.wit  package.wit  types.wit  universe.wit
