[workspace.package]
name = "poc5358"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "host",
    "guest/command",
    "guest/authorizer",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# wasmtime = { version = "33.0", features = ["component-model"] }
wasmtime = "33.0"
wasmtime-wasi = "33.0"
wit-bindgen = "0.42" 
